--- a/sub/web1/css/musinsa.css
+++ b/sub/web1/css/musinsa.css
@@ -188,13 +188,20 @@ header .MENU02 li a{
 }
 .Brand .rand .and .nd{
     color: #fff;
+    
 }
 .Brand .rand .and .nd a{}
-.Brand .rand .and .nd a img{}
+.Brand .rand .and .nd a img{
+    margin-right: 20px;
+}
 .Brand .rand .and .nd h3{
+    margin-left: 20px;
     font-size: 20px;
     margin-top: 21px;
     font-weight: 800;
+}
+.Brand .rand .and .nd p{
+    margin-left: 20px;
 }
 .Brand .rand .and .nd p:nth-of-type(1){
     font-size: 14px;
@@ -208,3 +215,50 @@ header .MENU02 li a{
     margin-top: 20px;    
     
 }
+/* footer */
+footer{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 150px 0;
+    background-color: #000;
+    color: #777777;
+}
+footer .last{
+    width: 1440px;
+    height: 100%;
+    margin: 0 auto;    
+    
+}
+footer .last .list ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    
+}
+footer .last .list ul li{
+    margin-right: 18px;
+}
+footer .last .ment{
+    margin-top: 45px;
+    
+
+}
+footer .last .ment span{
+    width: 100%;
+    color: #fff;
+    font-size: 16px;
+    margin-bottom: 20px;
+    display: block;
+}
+footer .last .ment p{
+    line-height: 1.5;
+    font-size: 14px;
+}
+footer .last .ment p a{
+    color: #fff;
+}
+footer .last .ment p:nth-of-type(2){
+    margin-top: 26px;
+}
+    
