--- a/sub/web1/css/musinsa.css
+++ b/sub/web1/css/musinsa.css
@@ -220,7 +220,7 @@ footer{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 150px 0;
+    padding: 150px 0px 30px;
     background-color: #000;
     color: #777777;
 }
